[package]
name = "deluxe_stat_bot"
version = "0.1.0"
edition = "2021"
authors = ["bkeeper.eth <bkeeper_eth@protonmail.com>"]

[dependencies]
tokio = { version = "1.15.0", features = [ "full" ] }
serde = { version = "1.0.135", features = [ "derive" ] }
reqwest = { version = "0.11.9", features = [ "blocking", "json"] }
egg-mode = { version = "0.16", features = ["rustls_webpki"], default-features = false }
polars = "0.18.0"
serde_yaml = "0.8.23"
serde_json = "1.0"
clap = "3.0.0"
log4rs = "1.0"
log = "0.4.14"
chrono = "0.4.19"

[[bin]]
name = "deluxe_stat_bot"
path = "src/main.rs"
