[package]
name = "lib"
version = "1.0.0"
edition = "2021"
authors = ["bkeeper.eth <bkeeper_eth@protonmail.com>"]

[dependencies]
egg-mode = { version = "0.16", features = ["rustls_webpki"], default-features = false }
plotly = { version = "0.7.0", features = ["kaleido"] }
itertools-num = "0.1.3"
rand_distr = "0.4.3"
web3 = "0.18.0"
log = "0.4.14"
serde_json = "1.0"
polars = "0.20.0"
clap = "3.0.0"
reqwest = { version = "0.11.9", features = [ "blocking", "json"] }

[lib]
name = "lib"
path = "src/lib.rs"
